[metadata]
name = asphalt-redis
description = edis integration component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-redis
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find_namespace:
install_requires =
    asphalt >= 3.0, < 5.0
    aioredis >= 1.0
    typeguard ~= 2.0

[options.packages.find]
include = asphalt.*

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio >= 0.5.0
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.0.5
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    redis = asphalt.redis.component:RedisComponent

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = asphalt.redis
branch = 1

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
exclude = .tox,docs
ignore = E251
