[metadata]
name = asphalt-redis
description = Redis integration component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-redis
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    = src
packages = find_namespace:
install_requires =
    asphalt ~= 4.6.0
    aioredis ~= 2.0
    typeguard ~= 2.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.0.5
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    redis = asphalt.redis.component:RedisComponent

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = asphalt.redis
branch = 1

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
exclude = .tox,docs
ignore = E251
